# NityBot

./: .env  .env.token  Cargo.toml  LICENSE  README.md  languages.db  languages.db-shm  languages.db-wal
migrations/: 20220711220652_initial_migration.sql  20220712234323_initial_migration.sql
src/: .env.discord  .env.token  groups.rs  handler.rs  main.rs  primitives.rs  utils.rs
src/api/: mod.rs  wikilang.rs
src/commands/: mod.rs
src/commands/general/: commandone.rs  gitstatus.rs  help.rs  lang.rs  langlist.rs  mod.rs  wiki.rs  wikilang.rs
src/commands/random/: mod.rs  random.rs  randomlang.rs
src/commands/slash/: mod.rs  wikilang.rs
src/commands/wiki/: mod.rs  wiki.rs  wikihelp.rs  wikilang.rs  wikirandom.rs  wikiuser.rs
