[package]
name = "nity_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
clap = "3.0.1"

[dependencies.serenity]
version = "0.11.2"
default-features = false
features = ["client", "cache", "gateway", "rustls_backend", "model", "framework", "standard_framework"]

[dependencies.tokio]
version = "1.15.0"
default-features = false
features = ["macros", "rt-multi-thread", "signal"]

[dependencies.reqwest]
version = "0.11.11"
default-features = false
features = ["blocking"]

[dependencies.rustbreak]
version = "2.0.0"
features = ["yaml_enc"]