[package]
name = "nity_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "sqlite", "offline"] }
dotenv = "0.15.0"
clap = "3.0.1"
wikipedia = "0.3.1"

[dependencies.serenity]
version = "0.11.2"
default-features = false
features = ["client", "cache", "gateway", "rustls_backend", "model", "framework", "standard_framework", "collector"]

[dependencies.tokio]
version = "1.15.0"
default-features = false
features = ["macros", "rt-multi-thread", "signal"]